# ZenKitCAPI

./: .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: build.yml
include/czenkit/: Boxes.h  CutsceneLibrary.h  DaedalusScript.h  DaedalusVm.h  Date.h  Font.h  Library.h  Logger.h  Material.h  Matrix.h  Mesh.h  Model.h  ModelAnimation.h  ModelHierarchy.h  ModelMesh.h  ModelScript.h  MorphMesh.h  MultiResolutionMesh.h  SoftSkinMesh.h  Stream.h  Texture.h  Vector.h  Vfs.h  World.h
include/czenkit/daedalus/: CameraInstance.h  EffectBaseInstance.hh  FightAiInstance.hh  FocusInstance.h  GuildValuesInstance.h  InfoInstance.h  ItemInstance.h  ItemReactInstance.h  MenuInstance.h  MenuItemInstance.h  MissionInstance.h  MusicJingleInstance.hh  MusicSystemInstance.hh  MusicThemeInstance.hh  NpcInstance.h  ParticleEffectEmitKeyInstance.hh  ParticleEffectInstance.hh  SoundEffectInstance.hh  SoundSystemInstance.hh  SpellInstance.h
include/czenkit/vobs/: Camera.h  Light.h  Misc.h  MovableObject.h  Sound.h  Trigger.h  VirtualObject.h  VirtualObject.hh  Zone.h
include/czenkit/world/: BspTree.h  WayNet.h
include/zenkit-capi/: Archive.h  Boxes.h  CutsceneLibrary.h  DaedalusScript.h  DaedalusVm.h  Date.h  Font.h  Library.h  Logger.h  Material.h  Matrix.h  Mesh.h  Model.h  ModelAnimation.h  ModelHierarchy.h  ModelMesh.h  ModelScript.h  MorphMesh.h  MultiResolutionMesh.h  Object.h  SaveGame.h  SoftSkinMesh.h  Stream.h  Texture.h  Vector.h  Vfs.h  World.h
include/zenkit-capi/daedalus/: CameraInstance.h  EffectBaseInstance.hh  FightAiInstance.hh  FocusInstance.h  GuildValuesInstance.h  InfoInstance.h  ItemInstance.h  ItemReactInstance.h  MenuInstance.h  MenuItemInstance.h  MissionInstance.h  MusicJingleInstance.hh  MusicSystemInstance.hh  MusicThemeInstance.hh  NpcInstance.h  ParticleEffectEmitKeyInstance.hh  ParticleEffectInstance.hh  SoundEffectInstance.hh  SpellInstance.h  (+2 more)
src/: Boxes.cc  CutsceneLibrary.cc  DaedalusScript.cc  DaedalusVm.cc  Font.cc  Internal.hh  Logger.cc  Material.cc  Mesh.cc  Model.cc  ModelAnimation.cc  ModelHierarchy.cc  ModelMesh.cc  ModelScript.cc  MorphMesh.cc  MultiResolutionMesh.cc  Object.cc  SaveGame.cc  SoftSkinMesh.cc  Stream.cc  Texture.cc  Vfs.cc  World.cc
src/daedalus/: CameraInstance.cc  EffectBaseInstance.cc  FightAiInstance.cc  FocusInstance.cc  GuildValuesInstance.cc  InfoInstance.cc  ItemInstance.cc  ItemReactInstance.cc  MenuInstance.cc  MenuItemInstance.cc  MissionInstance.cc  MusicJingleInstance.cc  MusicSystemInstance.cc  MusicThemeInstance.cc  NpcInstance.cc  ParticleEffectEmitKeyInstance.cc  ParticleEffectInstance.cc  SoundEffectInstance.cc  SoundSystemInstance.cc  SpellInstance.cc  SvmInstance.cc
src/vobs/: Camera.cc  Light.cc  Misc.cc  MovableObject.cc  Sound.cc  Trigger.cc  VirtualObject.cc  Zone.cc
src/world/: BspTree.cc  WayNet.cc
support/: BuildSupport.cmake
(+10 files in other folders)
